[package]
name = "my_os"
version = "0.1.0"
edition = "2021"

[dependencies]
x86_64 = "0.14.10"
bootloader = "0.11.10"
linked_list_allocator = "0.9.0"
bitflags = { version = "2.0", default-features = false }
lazy_static = { version = "1.4", features = ["spin_no_std"] }
uart_16550 = "0.2"
spin = "0.9"
arrayvec = "0.7"

[features]
default = ["std"]
std = []               # Enables compatibility with std
no_std = []            # Pure no_std mode
debug = []             # Debugging utilities
global_alloc = []      # Global allocator

[profile.dev]
panic = "abort"
lto = true
codegen-units = 1

[profile.release]
panic = "abort"
lto = true
codegen-units = 1

[build-dependencies]
bootimage = "0.10.2"

[package.metadata.bootloader]
target = "x86_64-unknown-none"

